--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "autoprefixer": "^10.3.4",
     "axios": "^0.21",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
-    "postcss": "^8.1.14",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.9",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5"
   },
@@ -28,8 +30,11 @@
     "@inertiajs/inertia": "^0.10.1",
     "@inertiajs/inertia-react": "^0.7.1",
     "@inertiajs/progress": "^0.2.6",
+    "@tailwindcss/forms": "^0.3.3",
+    "@types/react-recaptcha": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-recaptcha": "^2.3.10",
     "styled-components": "^5.3.0"
   }
 }
