docs: Add stuff to `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,13 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
+START_TIME="2021-09-17T00:00+0530"
+END_TIME="2021-09-31T23:59+0530"
+
+# CAPTCHA CREDS
+CAPTCHA_SECRET=
+CAPTCHA_SITEKEY=
