--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "require": {
     "php": "^7.3|^8.0",
+    "beyondcode/laravel-websockets": "^1.12",
+    "doctrine/dbal": "^3.1",
     "fruitcake/laravel-cors": "^2.0",
     "guzzlehttp/guzzle": "^7.0.1",
     "inertiajs/inertia-laravel": "^0.4.4",
@@ -16,6 +18,7 @@
     "laravel/sanctum": "^2.11",
     "laravel/socialite": "^5.2",
     "laravel/tinker": "^2.5",
+    "pusher/pusher-php-server": "~4.0",
     "socialiteproviders/discord": "^4.1"
   },
   "require-dev": {
