--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "@inertiajs/progress": "^0.2.6",
     "@tailwindcss/forms": "^0.3.3",
     "@types/react-recaptcha": "^2.3.4",
+    "@types/react-toast-notifications": "^2.4.1",
+    "date-fns": "^2.23.0",
+    "laravel-echo": "^1.11.2",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-recaptcha": "^2.3.10",
+    "react-toast-notifications": "^2.5.1",
     "styled-components": "^5.3.0"
   }
 }
