--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "laravel/socialite": "^5.2",
     "laravel/tinker": "^2.5",
     "pusher/pusher-php-server": "~4.0",
-    "socialiteproviders/discord": "^4.1"
+    "socialiteproviders/discord": "^4.1",
+    "team-reflex/discord-php": "^6.0"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.6",
