--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pusher-js": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-recaptcha": "^2.3.10",
     "react-toast-notifications": "^2.5.1",
     "styled-components": "^5.3.0"
