--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.18",
     "@types/react-google-recaptcha": "^2.1.2",
+    "@types/react-table": "^7.7.8",
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
@@ -41,6 +42,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-recaptcha": "^2.3.10",
+    "react-table": "^7.7.0",
     "react-toast-notifications": "^2.5.1",
     "styled-components": "^5.3.0"
   }
