--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=dc7fad45fd41eef57562",
-    "/css/app.css": "/css/app.css?id=0707723462d3fa4aebe4"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
